UtahLiveDataTest/src/objects/GrantServiceArea__c.object
<CustomObject>
    <description>[Business] Association of Grant with the service area</description>
    <fields>
        <fullName>AllocationPercentage__c</fullName>
        <formula>AmountAllocated__c  /  Grant__r.GrantProjectAreaAllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AmountAllocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Code of the Project</description>
        <label>Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field describes regarding Project</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipName>GrantServiceAreas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>GrantServiceAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant Project Area</label>
    <nameField>
        <displayFormat>GSA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>